feat(auth): enforce dedicated Firebase ID token verification with FirebaseLoginRequest DTO and decoupled OTP logic